--- a/prev versions/tictactoe2.html
+++ b/prev versions/tictactoe2.html
@@ -65,10 +65,10 @@
           tableValue = $("#table").text('1');
         }
 
-        var boxValues = $(".box").map(function(){
+        var match = $(".box").map(function(){
           return $(this).text();
         });
-        console.log(boxValues);
+        console.log(match);
         //Code Responsible for Declaring Victor
 
 
